hw/yolo_conv_fp_prj_2019_64/yolo_conv_fp_prj_2019_64.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
In file included from ../src/helloworld.cpp:52:
../../ps_bsp/ps7_cortexa9_0/include/xtime_l.h:87:70: note: #pragma message: For the sleep routines, Global timer is being used
 #pragma message ("For the sleep routines, Global timer is being used")
                                                                      ^
../src/helloworld.cpp: In function 'int main()':
../src/helloworld.cpp:121: error: 'XYolo_conv_top_Set_line_buff_stride_V' was not declared in this scope
     XYolo_conv_top_Set_line_buff_stride_V(&yolo_conv_top,INPUT_WIDTH - 2*PAD);
 
../src/helloworld.cpp:121: note: suggested alternative: 'XYolo_conv_top_Set_input_w_V'
../src/helloworld.cpp:128: note: -Wmisleading-indentation is disabled from this point onwards, since column-tracking was disabled due to the size of the code/headers
     Xil_DCacheFlushRange((u32)kernel_bias_fp_bits_pad,OUTPUT_CHANNEL*sizeof(short));
 
make: *** [src/helloworld.o] Error 1
src/subdir.mk:21: recipe for target 'src/helloworld.o' failed
15:07:48 **** Incremental Build of configuration Debug for project ps ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/helloworld.cpp
Invoking: ARM v7 g++ compiler
arm-none-eabi-g++ -Wall -O0 -g3 -I/home/xavier/MSc_Project/hls/yolo_conv_hls_2019/yolo_conv_fp_prj_2019_64/include -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../ps_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.cpp"
In file included from ../src/helloworld.cpp:52:
../../ps_bsp/ps7_cortexa9_0/include/xtime_l.h:87:70: note: #pragma message: For the sleep routines, Global timer is being used
 #pragma message ("For the sleep routines, Global timer is being used")
                                                                      ^
../src/helloworld.cpp: In function 'int main()':
../src/helloworld.cpp:121: error: 'XYolo_conv_top_Set_line_buff_stride_V' was not declared in this scope
     XYolo_conv_top_Set_line_buff_stride_V(&yolo_conv_top,INPUT_WIDTH - 2*PAD);
 
../src/helloworld.cpp:121: note: suggested alternative: 'XYolo_conv_top_Set_input_w_V'
../src/helloworld.cpp:128: note: -Wmisleading-indentation is disabled from this point onwards, since column-tracking was disabled due to the size of the code/headers
     Xil_DCacheFlushRange((u32)kernel_bias_fp_bits_pad,OUTPUT_CHANNEL*sizeof(short));
 
make: *** [src/helloworld.o] Error 1
src/subdir.mk:21: recipe for target 'src/helloworld.o' failed
15:08:16 **** Auto Build of configuration Debug for project ps ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/helloworld.cpp
Invoking: ARM v7 g++ compiler
arm-none-eabi-g++ -Wall -O0 -g3 -I/home/xavier/MSc_Project/hls/yolo_conv_hls_2019/yolo_conv_fp_prj_2019_64/include -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../ps_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.cpp"
In file included from ../src/helloworld.cpp:52:
../../ps_bsp/ps7_cortexa9_0/include/xtime_l.h:87:70: note: #pragma message: For the sleep routines, Global timer is being used
 #pragma message ("For the sleep routines, Global timer is being used")
                                                                      ^
../src/helloworld.cpp: In function 'int main()':
../src/helloworld.cpp:127: note: -Wmisleading-indentation is disabled from this point onwards, since column-tracking was disabled due to the size of the code/headers
     Xil_DCacheFlushRange((u32)kernel_bias_fp_bits_pad,OUTPUT_CHANNEL*sizeof(short));
 
Finished building: ../src/helloworld.cpp
 
Building target: ps.elf
Invoking: ARM v7 g++ linker
arm-none-eabi-g++ -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../ps_bsp/ps7_cortexa9_0/lib -o "ps.elf"  ./src/helloworld.o   -lm -Wl,--start-group,-lxil,-lgcc,-lc,-lstdc++,--end-group
Finished building target: ps.elf
 
Invoking: ARM v7 Print Size
arm-none-eabi-size ps.elf  |tee "ps.elf.size"
   text	   data	    bss	    dec	    hex	filename
  78268	6926088	5563016	12567372	 bfc34c	ps.elf
Finished building: ps.elf.size
 
